examples/errors/esem5.c
int suma (int s1, int s2)
{
	int res;
	res = s1 + s2;
}

int main ()
{
	int e1, e2, e3;
	
	e1 = suma (e2, e3);
}

